Saving the responsive design breakpoint 650-850px and some layout bugs related with hamburger menu fixed and horizontal line animation length fixed

--- a/ArchForm-folders/css-files/index.css
+++ b/ArchForm-folders/css-files/index.css
@@ -1085,7 +1085,7 @@ footer::before{
     }
     .menu-content{
         position: absolute;
-        top: 100%;
+        top: 90%;
         height: 0vh;
         display: none;
         padding: 50% 40%;
@@ -1093,6 +1093,7 @@ footer::before{
         z-index: 999;
         background-color: rgb(255, 255, 255);
         border-top: 1px solid #2f4f4f;
+        border-bottom: 1px solid #2f4f4f;
     }
     .menu-content ul{
         display: flex;
@@ -1106,9 +1107,9 @@ footer::before{
         font-family: 'Poppins Bold';
         font-size: 1.1rem;
     }
-    #menuContent.active{
+    .menu-content.active{
         display: block;
-        height: 100vh;
+        height: 90vh;
     }
     .main-content{
         z-index: 1;
@@ -1262,6 +1263,23 @@ footer::before{
         flex-direction: column-reverse;
         position: relative;
     }
+    .aboutUs-body::before{
+        content: '';
+        position: absolute;
+        height: 5%;
+        top: 44%;
+        animation-name: hr-LINE;
+        animation-timeline: view();
+        animation-range: entry 55% exit 80%;
+    }
+    @keyframes hr-LINE{
+        0%{
+            height: 5%;
+        }
+        100%{
+            height: 48%;
+        }
+    }
     .info-content{
         margin-top: 1%;
         height: 45%;
@@ -1294,7 +1312,7 @@ footer::before{
         background-image: url(../website-images/footer-images/footer-img.jpeg);
         background-attachment: scroll;
         position: relative;
-        z-index: -1;
+        z-index: 1;
     }
     footer::before{
         background-image: url(../website-images/footer-images/footer-img.jpeg);
@@ -1376,7 +1394,7 @@ footer::before{
     }
     .formular-inputs .submit-btn button{
         width: 100%;
-        transform: translateX(0px); /*transform hover animation stop*/
+        transform: translateX(0px) !important; /*transform hover animation stop*/
     }
 
 }
@@ -1404,7 +1422,7 @@ footer::before{
     }
     .menu-content{
         position: absolute;
-        top: 100%;
+        top: 90%;
         left: 0;
         height: 0vh;
         display: none;
@@ -1425,6 +1443,10 @@ footer::before{
         color: #ffffff;
         font-family: 'Poppins Bold';
         font-size: 1.1rem;
+    }
+    .menu-content.active{
+        display: block;
+        height: 90vh;
     }
     .main-content{
         z-index: 1;
@@ -1454,10 +1476,6 @@ footer::before{
         bottom: 3%;
         padding: 25px;
         border: 1px solid #2f4f4f;
-    }
-     #menuContent.active{
-        display: block;
-        height: 100vh;
     }
     .emergency-chat{
         height: 90%;
@@ -1607,7 +1625,7 @@ footer::before{
         padding-top: 2%;
     }
     .footer-content{
-        min-height: auto;
+        min-height: 20vh;
         height: auto;
     }
     .footer-left{
@@ -1663,7 +1681,7 @@ footer::before{
     }
 }
 @media(min-width:651px) and (max-width:850px){
-     .nav-links{
+    .nav-links{
         display: none;
     }
     .menu-btn{
@@ -1706,7 +1724,7 @@ footer::before{
     }
      #menuContent.active{
         display: block;
-        height: 100vh;
+        height: 90vh;
     }
     .main-content .main-title{
         width: 100%;
@@ -1799,6 +1817,8 @@ footer::before{
     }
     .aboutUs-body{
         display: flex;
+        min-height: 110vh;
+        height: auto;
         flex-direction: column;
     }
     .info-content-container{
@@ -1820,22 +1840,89 @@ footer::before{
             height: 5%;
         }
         100%{
-            height: 35%;
+            height: 25%;
         }
     }
     .aboutUs-body::before{
         content: '';
         position: absolute;
-        height: 40%;
+        height: 5%;
+        top: 3%;
+    }
+    footer{
+        display: flex;
+        flex-direction: column;
+        margin-top: 15%;
+        min-height: 150vh;
+    }
+    .footer-header{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-left: 0%;
+        font-size: 2rem;
+    }
+    .footer-left{
+        width: 90%;
+        height: 100%;
+        margin: auto;
+    }
+    .footer-nav{
+        height: 15vh;
+    }
+    .footer-help-center{
+        height: 15vh;
+    }
+    .help-center-btn{
+        width: 95%;
+        margin-left: 5%;
+    }
+    .footer-right{
+        width: 90%;
+        height: 100%;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+    }
+    .footer-info-elements{
+        display: none;
+    }
+    .footer-right form{
+        height: 75vh;
+    }
+     .formular-inputs .submit-btn{
+        width: 15%;
+        position: relative;
+    }
+    .formular-inputs .submit-btn button{
+        width: 100%;
+        height: 8vh;
+        margin: 0;
+        padding: 0;
+        position: absolute;
+        top: 0;
+        transform: translateX(0px) !important; /*transform hover animation stop*/
+    }
+    .extra-info{
+        display: block;
+        color: var(--text-color-white);
+        font-family: 'Poppins Regular';
+        margin-top: 5%;
+        text-align: center;
+        width: 100%;
     }
 }
 
-@media(min-width:851px){
+@media(min-width:851px) and (max-width:1187px){
      .nav-links{
         display: none;
     }
+    .main-nav{
+        width: 100%;
+    }
     .menu-btn{
-        display: block;
+        display: block !important;
     }
     .menu-btn button{
         padding: 16px;
@@ -1846,15 +1933,19 @@ footer::before{
     }
     .menu-content{
         position: absolute;
-        top: 100%;
+        top: 90%;
         left: 0;
         height: 0vh;
         display: none;
-        padding: 35% 40%;
+        padding: 35% 43%;
         width: 100%;
         z-index: 999;
         background-color: var(--background-color-green);
         border-top: 1px solid #2f4f4f;
+    }
+    .menu-content.active{
+        display: block;
+        height: 90vh;
     }
     .menu-content ul{
         display: flex;
@@ -1870,6 +1961,7 @@ footer::before{
     }
     .main-content{
         position: relative;
+        z-index: 1;
     }
     .main-content .main-title{
         width: 100%;
@@ -1901,7 +1993,9 @@ footer::before{
         justify-content: space-evenly;
         gap: 15px;
     }
-    
+    .box-content{
+        opacity: 1;
+    }
     .Features .Features-boxes .box{
         width: 30%;
     }
@@ -1927,6 +2021,9 @@ footer::before{
     }
     .stats-content{
         height: 90%;
+    }
+    .footer-header{
+        font-size: 2rem;
     }
 }
 @media(min-width:1188px){
